--- a/app/mygroupview/src/main/res/drawable/login_drawableb.xml
+++ b/app/mygroupview/src/main/res/drawable/login_drawableb.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <corners android:radius="8dp" />
-    <solid android:color="#D01342"/>/>
+    <corners android:radius="24dp" />
+
+    <size
+        android:width="1dp"
+        android:height="1dp"/>
+    <padding
+        android:left="15dp"
+        android:right="15dp"
+        android:top="15dp"
+        android:bottom="15dp"/>
+    <solid android:color="#2406EC"/>/>
 </shape>
